@@ -42,11 +42,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.servlet.ServletOutputStream;
@@ -157,7 +154,7 @@ public class TestCSVExportAction {
         assertEquals(url, status.getResult().get("url"));
 
         Blob blob = getBlob(command.getId());
-        // file is ziped
+        // file is zipped
         boolean zipped = command.getParam(ZIP_PARAMETER);
         String extension = zipped ? "zip" : "csv";
         assertEquals(extension, FilenameUtils.getExtension(blob.getFilename()));
@@ -172,7 +169,7 @@ public class TestCSVExportAction {
         }
 
         // file has the correct number of lines
-        List<String> lines = Files.lines(file.toPath()).collect(Collectors.toList());
+        List<String> lines = Files.lines(file.toPath()).toList();
         // number of docs plus the header
         assertEquals(CREATED_TOTAL + 1, lines.size());
 
@@ -186,7 +183,7 @@ public class TestCSVExportAction {
         if (sorted) {
             List<String> content = lines.subList(1, lines.size());
             List<String> sortedContent = new ArrayList<>(content);
-            Collections.sort(sortedContent);
+            sortedContent.sort(null);
             assertEquals(content, sortedContent);
         }
         assertTrue(status.getProcessingStartTime() != null);
@@ -259,9 +256,9 @@ public class TestCSVExportAction {
         Blob blob = getBlob(command.getId());
         File file = blob.getFile();
 
-        List<String> lines = Files.lines(file.toPath()).collect(Collectors.toList());
+        List<String> lines = Files.lines(file.toPath()).toList();
         // Check header
-        List<String> header = Arrays.asList(lines.get(0).split(","));
+        List<String> header = List.of(lines.get(0).split(","));
         // Check that the given schemas and properties are present after the system properties
 
         int systemHeaderSize = SYSTEM_PROPERTIES_HEADER_FIELDS.length;
@@ -278,7 +275,7 @@ public class TestCSVExportAction {
         for (String doc : content) {
             // There should be headerSize - 1 number of commas for headerSize number of properties
             assertEquals(headerSize - 1, StringUtils.countMatches(doc, ","));
-            List<String> properties = Arrays.asList(doc.split(","));
+            List<String> properties = List.of(doc.split(","));
             if (properties.contains("ComplexDoc")) {
                 assertTrue(properties.contains("Article FR"));
             }
@@ -389,7 +386,7 @@ public class TestCSVExportAction {
             downloadService.handleDownload(request, response, null, url);
         }
 
-        List<String> lines = Files.lines(testCsv.toPath()).collect(Collectors.toList());
+        List<String> lines = Files.lines(testCsv.toPath()).toList();
         long headerCount = lines.stream().filter(line -> line.startsWith("repository,uid")).count();
         assertEquals(1, headerCount);
         // number of docs plus header
